prometheus/service/service.yaml
kind: Service
apiVersion: v1
metadata: 
  name: prometheus-svc
spec:
  selector:
    app.kubernetes.io/name: prometheus-server
  ports:
  - name: http
    port: 9090
